@@ -58,10 +58,10 @@ public:
     explicit closure_value(unsigned int ui, value_error valid_ = error_noerror) 
     : type(is_uint), valid(valid_) 
     { value.ui = ui; }
-    explicit closure_value(long i, value_error valid_ = error_noerror) 
+    explicit closure_value(int_literal_type i, value_error valid_ = error_noerror) 
     : type(is_int), valid(valid_) 
     { value.i = i; }
-    explicit closure_value(unsigned long ui, value_error valid_ = error_noerror) 
+    explicit closure_value(uint_literal_type ui, value_error valid_ = error_noerror) 
     : type(is_uint), valid(valid_) 
     { value.ui = ui; }
     explicit closure_value(bool b, value_error valid_ = error_noerror) 
@@ -72,7 +72,7 @@ public:
     value_error is_valid() const { return valid; }
     
 // explicit conversion
-    friend int as_int(closure_value const& v)
+    friend int_literal_type as_int(closure_value const& v)
     {
         switch (v.type) {
         case is_uint:   return v.value.ui;
@@ -81,7 +81,7 @@ public:
         }
         return v.value.i;
     }
-    friend unsigned int as_uint(closure_value const& v)
+    friend uint_literal_type as_uint(closure_value const& v)
     {
         switch (v.type) {
         case is_uint:   return v.value.ui;
@@ -90,7 +90,7 @@ public:
         }
         return v.value.i;
     }
-    friend long as_long(closure_value const& v) 
+    friend int_literal_type as_long(closure_value const& v) 
     {
         switch (v.type) {
         case is_uint:   return v.value.ui;
@@ -99,7 +99,7 @@ public:
         }
         return v.value.i;
     }
-    friend unsigned long as_ulong(closure_value const& v)
+    friend uint_literal_type as_ulong(closure_value const& v)
     {
         switch (v.type) {
         case is_uint:   return v.value.ui;
@@ -154,14 +154,14 @@ public:
         valid = error_noerror;
         return *this;
     }
-    closure_value &operator= (long rhs)
+    closure_value &operator= (int_literal_type rhs)
     {
         type = is_int;
         value.i = rhs;
         valid = error_noerror;
         return *this;
     }
-    closure_value &operator= (unsigned long rhs)
+    closure_value &operator= (uint_literal_type rhs)
     {
         type = is_uint;
         value.ui = rhs;
@@ -184,7 +184,7 @@ public:
             switch(rhs.type) {
             case is_bool:
                 {
-                    long result = value.i + as_long(rhs); 
+                    int_literal_type result = value.i + as_long(rhs); 
                     if (rhs.value.i > 0L && value.i > result || 
                         rhs.value.i < 0L && value.i < result)
                     {
@@ -198,7 +198,7 @@ public:
                 
             case is_int:
                 {
-                    long result = value.i + rhs.value.i;
+                    int_literal_type result = value.i + rhs.value.i;
                     if (rhs.value.i > 0L && value.i > result || 
                         rhs.value.i < 0L && value.i < result)
                     {
@@ -212,7 +212,7 @@ public:
                 
             case is_uint:
                 {
-                    unsigned long result = value.ui + rhs.value.ui; 
+                    uint_literal_type result = value.ui + rhs.value.ui; 
                     if (result < value.ui) {
                         valid = error_integer_overflow;
                     }
@@ -227,7 +227,7 @@ public:
             
         case is_uint:
             {
-                unsigned long result = value.ui + as_ulong(rhs); 
+                uint_literal_type result = value.ui + as_ulong(rhs); 
                 if (result < value.ui) {
                     valid = error_integer_overflow;
                 }
@@ -251,7 +251,7 @@ public:
             switch(rhs.type) {
             case is_bool:
                 {
-                    long result = value.i - as_long(rhs); 
+                    int_literal_type result = value.i - as_long(rhs); 
                     if (rhs.value.i > 0L && result > value.i || 
                         rhs.value.i < 0L && result < value.i)
                     {
@@ -265,7 +265,7 @@ public:
 
             case is_int:
                 {
-                    long result = value.i - rhs.value.i;
+                    int_literal_type result = value.i - rhs.value.i;
                     if (rhs.value.i > 0L && result > value.i || 
                         rhs.value.i < 0L && result < value.i)
                     {
@@ -279,7 +279,7 @@ public:
                 
             case is_uint:
                 {
-                    unsigned long result = value.ui - rhs.value.ui; 
+                    uint_literal_type result = value.ui - rhs.value.ui; 
                     if (result > value.ui) {
                         valid = error_integer_overflow;
                     }
@@ -296,7 +296,7 @@ public:
             switch(rhs.type) {
             case is_bool:
                 {
-                    unsigned long result = value.ui - as_ulong(rhs); 
+                    uint_literal_type result = value.ui - as_ulong(rhs); 
                     if (result > value.ui)
                     {
                         valid = error_integer_overflow;
@@ -309,7 +309,7 @@ public:
 
             case is_int:
                 {
-                    unsigned long result = value.ui - rhs.value.i;
+                    uint_literal_type result = value.ui - rhs.value.i;
                     if (rhs.value.i > 0L && result > value.ui || 
                         rhs.value.i < 0L && result < value.ui)
                     {
@@ -323,7 +323,7 @@ public:
                 
             case is_uint:
                 {
-                    unsigned long result = value.ui - rhs.value.ui; 
+                    uint_literal_type result = value.ui - rhs.value.ui; 
                     if (result > value.ui) {
                         valid = error_integer_overflow;
                     }
@@ -350,7 +350,7 @@ public:
             case is_bool:   value.i *= as_long(rhs); break;
             case is_int:
                 {
-                    long result = value.i * rhs.value.i; 
+                    int_literal_type result = value.i * rhs.value.i; 
                     if (0 != value.i && 0 != rhs.value.i &&
                         (result / value.i != rhs.value.i ||
                          result / rhs.value.i != value.i)
@@ -366,7 +366,7 @@ public:
                 
             case is_uint:
                 {
-                    unsigned long result = value.ui * rhs.value.ui; 
+                    uint_literal_type result = value.ui * rhs.value.ui; 
                     if (0 != value.ui && 0 != rhs.value.ui &&
                         (result / value.ui != rhs.value.ui ||
                          result / rhs.value.ui != value.ui)
@@ -385,8 +385,8 @@ public:
             
         case is_uint:
             {
-                unsigned long rhs_val = as_ulong(rhs);
-                unsigned long result = value.ui * rhs_val; 
+                uint_literal_type rhs_val = as_ulong(rhs);
+                uint_literal_type result = value.ui * rhs_val; 
                 if (0 != value.ui && 0 != rhs_val &&
                     (result / value.ui != rhs_val ||
                       result / rhs_val != value.ui)
@@ -554,7 +554,7 @@ public:
         switch (rhs.type) {
         case is_int:
             {
-                long value = as_long(rhs);
+                int_literal_type value = as_long(rhs);
                 if (value != 0 && value == -value)
                     return closure_value(-value, error_integer_overflow);
                 return closure_value(-value, rhs.valid);
@@ -564,7 +564,7 @@ public:
         case is_uint:   break;
         }
 
-        long value = as_ulong(rhs);
+        int_literal_type value = as_ulong(rhs);
         if (value != 0 && value == -value)
             return closure_value(-value, error_integer_overflow);
         return closure_value(-value, rhs.valid);
@@ -666,7 +666,7 @@ public:
             case is_bool:
             case is_int:
                 {
-                long shift_by = as_long(rhs);
+                int_literal_type shift_by = as_long(rhs);
                     
                     if (shift_by > 64) 
                         shift_by = 64;
@@ -678,7 +678,7 @@ public:
                 
             case is_uint:
                 {
-                unsigned long shift_by = as_ulong(rhs);
+                uint_literal_type shift_by = as_ulong(rhs);
                     
                     if (shift_by > 64) 
                         shift_by = 64;
@@ -696,7 +696,7 @@ public:
             case is_bool:
             case is_int:
                 {
-                long shift_by = as_long(rhs);
+                int_literal_type shift_by = as_long(rhs);
                     
                     if (shift_by > 64) 
                         shift_by = 64;
@@ -708,7 +708,7 @@ public:
                 
             case is_uint:
                 {
-                unsigned long shift_by = as_ulong(rhs);
+                uint_literal_type shift_by = as_ulong(rhs);
                     
                     if (shift_by > 64) 
                         shift_by = 64;
@@ -731,7 +731,7 @@ public:
             case is_bool:
             case is_int:
                 {
-                long shift_by = as_long(rhs);
+                int_literal_type shift_by = as_long(rhs);
                     
                     if (shift_by > 64) 
                         shift_by = 64;
@@ -743,7 +743,7 @@ public:
                 
             case is_uint:
                 {
-                unsigned long shift_by = as_ulong(rhs);
+                uint_literal_type shift_by = as_ulong(rhs);
                     
                     if (shift_by > 64) 
                         shift_by = 64;
@@ -761,7 +761,7 @@ public:
             case is_bool:
             case is_int:
                 {
-                long shift_by = as_long(rhs);
+                int_literal_type shift_by = as_long(rhs);
                     
                     if (shift_by > 64) 
                         shift_by = 64;
@@ -773,7 +773,7 @@ public:
                 
             case is_uint:
                 {
-                unsigned long shift_by = as_ulong(rhs);
+                uint_literal_type shift_by = as_ulong(rhs);
                     
                     if (shift_by > 64) 
                         shift_by = 64;
@@ -804,21 +804,21 @@ public:
     friend closure_value 
     operator| (closure_value const &lhs, closure_value const &rhs)
     {
-        unsigned long result = as_ulong(lhs) | as_ulong(rhs);
+        uint_literal_type result = as_ulong(lhs) | as_ulong(rhs);
         return closure_value(result, (value_error)(lhs.valid | rhs.valid));
     }
     
     friend closure_value 
     operator& (closure_value const &lhs, closure_value const &rhs)
     {
-        unsigned long result = as_ulong(lhs) & as_ulong(rhs);
+        uint_literal_type result = as_ulong(lhs) & as_ulong(rhs);
         return closure_value(result, (value_error)(lhs.valid | rhs.valid));
     }
 
     friend closure_value 
     operator^ (closure_value const &lhs, closure_value const &rhs)
     {
-        unsigned long result = as_ulong(lhs) ^ as_ulong(rhs);
+        uint_literal_type result = as_ulong(lhs) ^ as_ulong(rhs);
         return closure_value(result, (value_error)(lhs.valid | rhs.valid));
     }
     
@@ -861,8 +861,8 @@ public:
 private:
     value_type type;
     union {
-        long i;
-        unsigned long ui;
+        int_literal_type i;
+        uint_literal_type ui;
         bool b;
     } value;
     value_error valid;
